feature : adding good practices and implementing spring security to use tokens and access methods only if authenticated

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/clinic
 spring.datasource.username=postgres
 spring.datasource.password=1234
+server.error.include-stacktrace=never
+
+# Spring Security
+api.security.token.secret=${JWT_SECRET:12345678}
